refactorig for poryectos : 2