@@ -3,8 +3,8 @@ package com.llosa.backend.proyecto.service.impl;
 import com.llosa.backend.proyecto.dto.response.SeguimientoResponseDTO;
 import com.llosa.backend.proyecto.dto.shared.FaseActualDTO;
 import com.llosa.backend.proyecto.dto.shared.PasoStepperDTO;
-import com.llosa.backend.proyecto.entity.HitoUnidad;
-import com.llosa.backend.proyecto.repository.HitoUnidadRepository;
+import com.llosa.backend.proyecto.entity.HitoPiso;
+import com.llosa.backend.proyecto.repository.HitoPisoRepository;
 import com.llosa.backend.proyecto.service.SeguimientoService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -18,82 +18,67 @@ import java.util.UUID;
 @RequiredArgsConstructor
 public class SeguimientoServiceImpl implements SeguimientoService {
 
-    // Solo inyectamos el repositorio técnico, ¡cero dependencias comerciales!
-    private final HitoUnidadRepository hitoUnidadRepository;
+    private final HitoPisoRepository hitoPisoRepository;
 
     @Override
     public SeguimientoResponseDTO obtenerSeguimiento(UUID idActivo) {
 
-        // 1. Traemos todos los hitos de la unidad ordenados de inicio a fin
-        List<HitoUnidad> hitos = hitoUnidadRepository.findByActivo_IdOrderByHito_OrdenAsc(idActivo);
+        List<HitoPiso> hitos = hitoPisoRepository.findByActivoIdOrderByHitoOrdenAsc(idActivo);
 
         if (hitos == null || hitos.isEmpty()) {
-            throw new RuntimeException("No se encontraron hitos de obra para este activo.");
+            throw new RuntimeException("No se encontraron hitos de obra para el piso de este activo.");
         }
 
         List<PasoStepperDTO> stepper = new ArrayList<>();
-        HitoUnidad hitoActualEnProgreso = null;
+        HitoPiso hitoActualEnProgreso = null;
         boolean hitoActualEncontrado = false;
 
-        // 2. Armar el Stepper y descubrir cuál es la fase actual
-        for (HitoUnidad hu : hitos) {
+        for (HitoPiso hp : hitos) {
             String estadoVisual;
 
-            if ("COMPLETADO".equalsIgnoreCase(hu.getEstado().name())) {
+            if ("COMPLETADO".equalsIgnoreCase(hp.getEstado().name())) {
                 estadoVisual = "COMPLETADO";
             } else if (!hitoActualEncontrado) {
-                // El primer hito NO completado es el que está en progreso ahora mismo
                 estadoVisual = "EN_PROGRESO";
-                hitoActualEnProgreso = hu;
+                hitoActualEnProgreso = hp;
                 hitoActualEncontrado = true;
             } else {
-                // Todos los demás hacia adelante están pendientes
                 estadoVisual = "PENDIENTE";
             }
 
             stepper.add(PasoStepperDTO.builder()
-                    .nombre(hu.getHito().getTitulo()) // El título del hito base
+                    .nombre(hp.getHito().getTitulo())
                     .estado(estadoVisual)
-                    .orden(hu.getHito().getOrden())
+                    .orden(hp.getHito().getOrden())
                     .build());
         }
 
-        // 3. Armar el objeto FaseActualDTO
         FaseActualDTO faseActualDTO;
 
         if (hitoActualEnProgreso != null) {
-            // Calcular el porcentaje de la etapa a la que pertenece este hito
-            Long idEtapaActual = hitoActualEnProgreso.getHito().getEtapa().getId();
-
-            List<HitoUnidad> hitosDeEstaEtapa = hitos.stream()
-                    .filter(h -> h.getHito().getEtapa().getId().equals(idEtapaActual))
-                    .toList();
-
-            long completadosEnEtapa = hitosDeEstaEtapa.stream()
+            long completadosTotales = hitos.stream()
                     .filter(h -> "COMPLETADO".equalsIgnoreCase(h.getEstado().name()))
                     .count();
 
-            double porcentaje = hitosDeEstaEtapa.isEmpty() ? 0.0 :
-                    ((double) completadosEnEtapa / hitosDeEstaEtapa.size()) * 100.0;
+            double porcentaje = hitos.isEmpty() ? 0.0 :
+                    ((double) completadosTotales / hitos.size()) * 100.0;
 
             faseActualDTO = FaseActualDTO.builder()
                     .uuidHitoU(hitoActualEnProgreso.getId())
                     .titulo(hitoActualEnProgreso.getHito().getTitulo())
-                    // Usamos la descripción de la etapa, ya que el Hito no tiene campo descripción
-                    .descripcion(hitoActualEnProgreso.getHito().getEtapa().getDescripcion())
-                    .porcentajeEtapa(Math.round(porcentaje * 100.0) / 100.0) // Redondear a 2 decimales
+                    .descripcion("Fase en progreso: " + hitoActualEnProgreso.getHito().getTitulo())
+                    .porcentajeEtapa(Math.round(porcentaje * 100.0) / 100.0)
                     .fechaInicioFase(hitoActualEnProgreso.getUpdatedAt() != null ? 
                             hitoActualEnProgreso.getUpdatedAt() : LocalDateTime.now())
                     .build();
 
         } else {
-            // Si hitoActualEnProgreso es NULL, significa que TODOS están completados
-            HitoUnidad ultimoHito = hitos.getLast();
+            HitoPiso ultimoHito = hitos.get(hitos.size() - 1);
 
             faseActualDTO = FaseActualDTO.builder()
                     .uuidHitoU(ultimoHito.getId())
                     .titulo("Obra Finalizada")
-                    .descripcion("El proyecto ha completado todas sus fases de construcción al 100%.")
+                    .descripcion("El piso ha completado todas sus fases de construcción al 100%.")
                     .porcentajeEtapa(100.0)
                     .fechaInicioFase(ultimoHito.getFechaCompletado() != null ?
                             ultimoHito.getFechaCompletado().atStartOfDay() : 
@@ -101,7 +86,6 @@ public class SeguimientoServiceImpl implements SeguimientoService {
                     .build();
         }
 
-        // 4. Retornar el DTO intacto para el Frontend
         return SeguimientoResponseDTO.builder()
                 .stepper(stepper)
                 .faseActual(faseActualDTO)
